--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@ prompted the owner to seek for a software solution.
                                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                   <label class="form-check-label" for="exampleCheck1">Remember Me?</label>
                                 </div>
-                                <button type="submit" class="btn btn-primary">Submit</button>
+                                <button type="submit" class="btn  btn-primary">Submit</button>
+                                <div class="mb-3">
+                                <p class="mt-3">Don't have an account? <a href="register.html">Register</a></p>
+                                </div>
                               </form>
 
                         </form>
