--- a/products.html
+++ b/products.html
@@ -37,7 +37,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Gnuts - 7500UGX per kg</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <a href="#" class="btn btn-primary">Gnuts</a>
                             </div>
                           </div>
                     </div>
@@ -47,7 +47,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Maize</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <a href="#" class="btn btn-primary">Maize</a>
                             </div>
                           </div>
                     </div>
@@ -58,7 +58,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Beans</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <a href="#" class="btn btn-primary">Beans</a>
                             </div>
                           </div>
                     </div>
