--- a/products/beans.html
+++ b/products/beans.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container-fluid">
+        <p>
+            You’d be hard pressed to find a culture that does not embrace beans in one way or another. 
+
+Fermented black beans and soy are deeply embedded in Asian cuisine. Italian food often incorporates the small white cannellini bean, while Spain and France embrace larger white beans, kidney, and tiny caviar lentils. Beans are an undoubtedly a cornerstone in Latin nations and present at virtually every meal.
+
+But what is the difference between the bean, the legume, and a pulse?
+
+Legumes are plants that bear fruit that grow in pods. Beans are the seed from different varieties of plants, although typically the whole plant is referred to as beans. In other words: all beans are legumes, but legumes aren’t necessarily beans.
+
+Pulses include beans, lentils, and peas. For example, a pea pod is a legume, but the pea inside the pod is a pulse. The entire legume plant is often used in agricultural applications (as cover crops or in livestock feed or fertilizers), while the seeds or pulses are what typically end up on our dinner plates.
+        </p>
+      </div>
 </body>
 </html>
