--- a/products/maize.html
+++ b/products/maize.html
@@ -6,6 +6,34 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>
+        ze (corn)
+ContentContent
+1. Description
+1.0. Uses & Benefits
+2. Uses & Benefits
+3. Varieties
+3.0. Propagation
+4. Propagation
+5. Physiological Diseases
+Diseases
+- Fungal
+- Bacterial
+-
+- Viral
+- Oomycete
+- Other
+Pests
+- Insects
+- Nematodes
+- Mites
+See questions about Maize (corn)
+Description
+Maize is a staple food for almost half the population of sub-Saharan Africa and is important for its carbohydrate, proteins, iron, vitamin B, and minerals. The produce is consumed as maize meal (ugali), porridge, pastes, and beer, and can be boiled or roasted as fresh as it comes from the farm. Maize is also processed to produce oils for cooking. It is also an important crop for animal feed.
+
+Smallholder farmers are the largest producers of maize in sub-Saharan Africa. The maize is produced through subsistence farming as part of mixed agricultural systems which lack inputs such as fertiliser, irrigation, improved seeds and efficient labor.  
+
+In 2017, Africa produced 7.4% of the 1,135 million tonnes produced worldwide in 40 million hectares, according to data by the Food and Agriculture Organization (FAO).
+    </p>
 </body>
 </html>
