--- a/dashboard.html
+++ b/dashboard.html
@@ -18,12 +18,12 @@
                     <div class="card-body">
                         <ul class="list-group">
                             <li class="list-group-item"><a href="/dashboard.html">Dashboard</a></li>
-                            <li class="list-group-item">Companies</li>
-                            <li class="list-group-item">Users</li>
-                            <li class="list-group-item"> <a href="/products.html">Products</a></li>
-                            <li class="list-group-item">Payments</li>
-                            <li class="list-group-item">Sales</li>
-                            <li class="list-group-item"><a href="/index.html">Logout</a></li
+                                <li class="list-group-item"><a href="/my_account.html">My Account</a></li>
+                                <li class="list-group-item"><a href="/my_account.html">Users</a></li>
+                                <li class="list-group-item"> <a href="/products.html">Products</a></li>
+                                <li class="list-group-item"><a href="#">Payments</a></li>
+                                <li class="list-group-item"><a href="/sales.html">sales</a></li>
+                                <li class="list-group-item"><a href="/index.html">Logout</a>
                         </ul>
                     </div>
                 </div>
@@ -100,41 +100,7 @@
                     </div>
                 </div>
 
-                <div class="row mt-2">
-                    <div class="col">
-                        <div class="card">
-                            <div class="card-header">
-                                <h4>Latest Sales</h4>
-                            </div>
-                            <div class="card-body">
-                                <table class="table">
-                                    <thead>
-                                      <tr>
-                                        <th scope="col">#</th>
-                                        <th scope="col">Branch</th>
-                                        <th scope="col">Product</th>
-                                        <th scope="col">Prices (UGX)</th>
-                                      </tr>
-                                    </thead>
-                                    <tbody>
-                                      <tr>
-                                        <th scope="row">1</th>
-                                        <td>Matugga</td>
-                                        <td>Coffee</td>
-                                        <td>50,000</td>
-                                      </tr>
-                                      <tr>
-                                        <th scope="row">2</th>
-                                        <td>Matugga</td>
-                                        <td>Beans</td>
-                                        <td>150,000</td>
-                                      </tr>
-                                    </tbody>
-                                  </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
             
             </div>
         </div>
