--- a/my_account.html
+++ b/my_account.html
@@ -16,13 +16,14 @@
                     </div>
                     <div class="card-body">
                         <ul class="list-group">
+                            <li class="list-group-item"><a href="index.html">Home</a></li>
                             <li class="list-group-item"><a href="/dashboard.html">Dashboard</a></li>
-                            <li class="list-group-item">Companies</li>
-                            <li class="list-group-item">Users</li>
-                            <li class="list-group-item"> <a href="/products.html">Products</a> </li>
-                            <li class="list-group-item">Payments</li>
-                            <li class="list-group-item">Sales</li>
-                            <li class="list-group-item"><a href="/index.html">Logout</a></li
+                            <li class="list-group-item"><a href="/my_account.html">My Account</a></li>
+                            <li class="list-group-item"><a href="/my_account.html">Users</a></li>
+                            <li class="list-group-item"> <a href="/products.html">Products</a></li>
+                            <li class="list-group-item"><a href="#">Payments</a></li>
+                            <li class="list-group-item"><a href="/sales.html">sales</a></li>
+                            <li class="list-group-item"><a href="/index.html">Logout</a></li>
                         </ul>
                     </div>
                 </div>
