--- a/register.html
+++ b/register.html
@@ -17,12 +17,12 @@
                     <div class="card-body">
                         <ul class="list-group">
                             <li class="list-group-item"><a href="index.html">Home</a></li>
-                            <li class="list-group-item"><a href="/dashboard.html">Dashboard</a></li>
-                            <li class="list-group-item"><a href="/my_account.html">My Account</a></li>
-                            <li class="list-group-item"><a href="/my_account.html">Users</a></li>
-                            <li class="list-group-item"> <a href="/products.html">Products</a></li>
+                            <li class="list-group-item"><a href="dashboard.html">Dashboard</a></li>
+                            <li class="list-group-item"><a href="my_account.html">My Account</a></li>
+                            <li class="list-group-item"><a href="my_account.html">Users</a></li>
+                            <li class="list-group-item"> <a href="products.html">Products</a></li>
                             <li class="list-group-item"><a href="sales.html">Payments</a></li>
-                            <li class="list-group-item"><a href="/sales.html">sales</a></li>
+                            <li class="list-group-item"><a href="sales.html">sales</a></li>
                             <li class="list-group-item"><a href="/index.html">Logout</a></li>
                         </ul>
                     </div>
